--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@formatjs/intl-pluralrules": "^3.5.6",
         "@formatjs/intl-relativetimeformat": "^7.3.6",
+        "@fortawesome/fontawesome-free": "^6.5.0",
         "axios": "^0.21.1",
         "bootstrap": "^5.0.1",
         "connected-react-router": "^6.9.1",
@@ -24,6 +25,7 @@
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
+        "react-slick": "^0.28.1",
         "react-toastify": "^5.5.0",
         "reactstrap": "^8.9.0",
         "redux": "^4.1.0",
@@ -32,6 +34,7 @@
         "redux-persist": "^5.10.0",
         "redux-state-sync": "^2.1.0",
         "redux-thunk": "^2.3.0",
+        "slick-carousel": "^1.8.1",
         "typescript": "^4.3.2"
     },
     "scripts": {
