--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@formatjs/intl-relativetimeformat": "^7.3.6",
         "@fortawesome/fontawesome-free": "^6.5.0",
         "axios": "^0.21.1",
-        "bootstrap": "^5.0.1",
+        "bootstrap": "^5.3.2",
         "connected-react-router": "^6.9.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.0",
@@ -15,6 +15,7 @@
         "react": "^17.0.2",
         "react-auth-wrapper": "^1.0.0",
         "react-autosuggest": "^10.1.0",
+        "react-bootstrap": "^2.9.1",
         "react-bootstrap-table-next": "^4.0.3",
         "react-bootstrap-table2-filter": "^1.3.3",
         "react-custom-scrollbars": "^4.2.1",
@@ -27,7 +28,7 @@
         "react-scripts": "^4.0.3",
         "react-slick": "^0.28.1",
         "react-toastify": "^5.5.0",
-        "reactstrap": "^8.9.0",
+        "reactstrap": "^8.10.1",
         "redux": "^4.1.0",
         "redux-auth-wrapper": "^2.1.0",
         "redux-logger": "^3.0.6",
