--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@formatjs/intl-relativetimeformat": "^7.3.6",
         "@fortawesome/fontawesome-free": "^6.5.0",
         "axios": "^0.21.1",
-        "bootstrap": "^5.3.2",
+        "bootstrap": "^4.6.0",
         "connected-react-router": "^6.9.1",
         "lodash": "^4.17.21",
         "moment": "^2.29.0",
@@ -21,6 +21,7 @@
         "react-custom-scrollbars": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-flatpickr": "^3.10.7",
+        "react-image-lightbox": "^5.1.1",
         "react-intl": "^5.20.2",
         "react-redux": "^7.2.4",
         "react-router": "^5.2.0",
